# nyx

./: README.md  docker-compose-prod.yml  env.example  script.sh
.github/workflows/: categories-api.yml  couchdb.yml  data.yml  dialog-api.yml  dialog-model.yml  monitoring.yml  publish.yml  recommend-api.yml  recommend-db.yml  recommend-model.yml  summary-api.yml  summary-model.yml  tracking-api.yml  train.yml  website.yml
categories-api/: docker-compose.yml  env.example  go.mod  go.sum  main.go
categories-api/cache/: cache.go
categories-api/controller/: controller.go
categories-api/db/: db.go
categories-api/model/: category.go
couchdb/: docker-compose.yml
dialog-api/: .gitignore  docker-compose.yml  env-prod.example  go.mod  go.sum  main.go  pyproject.toml
dialog-api/client/: client.go
dialog-api/controller/: controller.go
dialog-api/couchdb/: docker-compose.yml
dialog-api/db/: db.go
dialog-api/env/: env.example
dialog-api/model/: chat.go  dialog.go
dialog-api/schema/: Makefile  schema.pb.go  schema.proto  schema_grpc.pb.go
dialog-api/util/: util.go
dialog-model/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  schema.proto  schema_pb2.py
dialog-model/.dvc/: config
dialog-model/data/: test.txt.dvc  train.txt.dvc
dialog-model/server/: main.py  schema_pb2.py  schema_pb2_grpc.py
dialog-model/src/: get_data.py
dialog-model/train/: train.py
docs/: diagram.drawio  presentation.pptx
monitoring/: docker-compose.yml  sql.txt
recommend-api/: .env-prod.example  Dockerfile  docker-compose.yml  env-prod.example  go.mod  go.sum  main.go
recommend-api/client/: client.go
recommend-api/db/: recommend.go
recommend-api/env/: env.example
recommend-api/model/: category.go  recommend.go  recommend_db.go  recommend_result.go  recommendation.go  result.go
recommend-api/queue/: queue.go
recommend-api/schema/: schema.pb.go  schema.proto  schema_grpc.pb.go
recommend-api/util/: util.go
recommend-db/: Dockerfile  db.sql  docker-compose.yml  my.cnf
recommend-lambda/: go.mod  go.sum  lambda.go  main.go  template.html
recommend-lambda/email/: email.go  template.html
recommend-lambda/env/: env.example
recommend-model/: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  schema.proto  schema_pb2.py  schema_pb2_grpc.py
summary-api/: .gitignore  docker-compose.yml  env-prod.example  go.mod  go.sum  main.go
summary-model/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  schema_pb2.py  schema_pb2_grpc.py
tracking-api/: Dockerfile  docker-compose.yml  go.mod  index.html  main.go
website/: Dockerfile  docker-compose.yml  package-lock.json  package.json  webpack.config.js
(+21 files in other folders)
