[tool.poetry]
name = "dialog-api"
version = "0.1.0"
description = ""
authors = ["david-slatinek"]
license = "MIT"
readme = "README.md"
packages = [{include = "dialog_api"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
