[tool.poetry]
name = "recommend-model"
version = "0.1.0"
description = ""
authors = ["david-slatinek"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
